# Coffee-Bean-Classification-Package

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
coffee_bean_classification/: pipeline.py  setup.py  version.py
coffee_bean_classification/configs/: __init__.py  base.py  data.py  model.py  training.py
coffee_bean_classification/data/: __init__.py  augmentation.py  base.py  pipeline.py
coffee_bean_classification/evaluation/: __init__.py  comparator.py  evaluator.py  metrics.py
coffee_bean_classification/models/: __init__.py  base.py  densenet.py  efficientnet.py  factory.py  mobilenet.py  resnet.py
coffee_bean_classification/registry/: __init__.py  metadata.py  registry.py
coffee_bean_classification/training/: __init__.py  callbacks.py  trainer.py
coffee_bean_classification/utils/: __init__.py  file_manager.py  logger.py  seed_manager.py  validators.py
docs/: API_REFERENCE.md  DEPLOYMENT.md  EXAMPLES.md  README.md  USER_GUIDE.md
examples/: advanced_config.yaml  basic_config.yaml  data_pipeline_examples.py  model_factory_examples.py  training_examples.py  usage_examples.py
tests/: test_configs.py  test_data_pipeline.py  test_integration.py  test_models.py  test_training.py
